fixed the team div to align with about spotted div, fixed margins on hot spots, fixed jumbotron

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,11 +4,10 @@
     object-fit: cover;
 }
 
-#jumbotron {
-    min-height: 450px;
-}
+// #jumbotron {
+//     min-height: 300px;
+// }
 #jumbotron h5{
- margin-top:10%; 
+//  margin-top:10%; 
   left:10px;
 }
-
